[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/colorpicker/ColorPicker.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ubuntu/ubuntu-normal-nerd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/barbutton/BarButton.theme" type="Theme" id=3]
[ext_resource path="res://assets/fonts/ubuntu/ubuntu-bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/colorpicker/HueSlider.gd" type="Script" id=6]
[ext_resource path="res://ui/colorpicker/ColorSelect.gd" type="Script" id=7]
[ext_resource path="res://ui/colorpicker/OldColorView.gd" type="Script" id=9]
[ext_resource path="res://ui/colorpicker/huepicker.material" type="Material" id=10]
[ext_resource path="res://ui/colorpicker/ColorSelect.material" type="Material" id=11]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )
fallback/0 = ExtResource( 2 )

[node name="ColorPicker" type="MarginContainer"]
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 125, 125 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="V" type="VBoxContainer" parent="."]
margin_right = 185.0
margin_bottom = 185.0
custom_constants/separation = 5

[node name="H" type="HBoxContainer" parent="V"]
margin_right = 185.0
margin_bottom = 150.0
custom_constants/separation = 5

[node name="HueSlider" type="MarginContainer" parent="V/H"]
margin_right = 30.0
margin_bottom = 150.0
rect_min_size = Vector2( 30, 150 )
size_flags_vertical = 0
script = ExtResource( 6 )

[node name="ShaderHolder" type="ColorRect" parent="V/H/HueSlider"]
show_behind_parent = true
material = ExtResource( 10 )
margin_right = 30.0
margin_bottom = 150.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )

[node name="ColorSelect" type="MarginContainer" parent="V/H"]
margin_left = 35.0
margin_right = 185.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
hint_tooltip = "click it!"
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )

[node name="ShaderHolder" type="ColorRect" parent="V/H/ColorSelect"]
show_behind_parent = true
material = ExtResource( 11 )
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2

[node name="H2" type="HBoxContainer" parent="V"]
margin_top = 155.0
margin_right = 185.0
margin_bottom = 185.0
custom_constants/separation = 0

[node name="Close" type="Button" parent="V/H2"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "ÔÄç"

[node name="Spacer" type="Control" parent="V/H2"]
margin_left = 30.0
margin_right = 35.0
margin_bottom = 30.0
rect_min_size = Vector2( 5, 0 )

[node name="OldColorView" type="ColorRect" parent="V/H2"]
margin_left = 35.0
margin_right = 110.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
script = ExtResource( 9 )

[node name="NewColorPreview" type="ColorRect" parent="V/H2"]
margin_left = 110.0
margin_right = 185.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )

[connection signal="hue_changed" from="V/H/HueSlider" to="V/H/ColorSelect" method="_hue_changed"]
[connection signal="color_changed" from="V/H/ColorSelect" to="." method="_color_changed"]
[connection signal="gui_input" from="V/H/ColorSelect" to="V/H/ColorSelect" method="_gui_input"]
[connection signal="pressed" from="V/H2/Close" to="." method="done"]
[connection signal="color_changed" from="V/H2/OldColorView" to="." method="_color_changed"]
[connection signal="gui_input" from="V/H2/OldColorView" to="V/H2/OldColorView" method="_gui_input"]
